Backend/MaintainDataConfidentialityParser.java
/* Generated By:JavaCC: Do not edit this line. MaintainDataConfidentialityParser.java */
import java.util.*;

public class MaintainDataConfidentialityParser implements MaintainDataConfidentialityParserConstants {
    static List detectedTactics = new ArrayList();
    static Map pendingEncryptions = new HashMap();
    static Map encryptionToSend = new HashMap();

    public static void main(String args[]) throws ParseException {
        try {
            Scanner scanner = new Scanner(System.in);
            StringBuilder inputBuilder = new StringBuilder();

            while (scanner.hasNextLine()) {
                String line = scanner.nextLine();
                inputBuilder.append(line).append("\n");
            }
            scanner.close();

            String traceInput = inputBuilder.toString();

            MaintainDataConfidentialityParser parser = new MaintainDataConfidentialityParser(new java.io.StringReader(traceInput));

            System.out.println("\n=====================================================================================");
            System.out.println("                   TACTIC DETECTION SYSTEM INITIALIZED  ");
            System.out.println("=====================================================================================\n");

            System.out.println("                      <----  Tactic structure ----> : ");
            System.out.println(" Encryptor:TraceEncryptor --METHOD--> Encryptor:TraceEncryptor");
            System.out.println(" Encryptor:TraceEncryptor --METHOD--> Decryptor:TraceDecryptor");
            System.out.println(" Decryptor:TraceDecryptor --METHOD--> Decryptor:TraceDecryptor");

            parser.Start();

            if (!detectedTactics.isEmpty()) {
                System.out.println("\n=====================================================================================");
                System.out.println("                            ANALYSIS SUMMARY   ");
                System.out.println("=====================================================================================");
                System.out.println(" Total Maintain Data Confidentiality Tactic occurrences detected: " + detectedTactics.size());
                System.out.println("=====================================================================================");

                int count = 1;
                System.out.println("\n=====================================================================================");
                System.out.println("                            TACTIC DETECTION  ");
                System.out.println("=====================================================================================\n");

                for (Object obj : detectedTactics) {
                    Map tactic = (Map) obj;
                    System.out.println("Tactic " + count + ":");
                    System.out.println("   Encryptor --> " + tactic.get("Encryptor"));
                    System.out.println("   Decryptor --> " + tactic.get("Decryptor"));
                    count++;
                }
                System.out.println("Total number of detected tactics: " + detectedTactics.size());
            } else {
                System.out.println("No Maintain Data Confidentiality tactics detected.");
            }
        } catch (Exception e) {
            System.out.println(" Error: " + e.getMessage());
            e.printStackTrace();
        }
    }

/** Point d'entrée */
  static final public void Start() throws ParseException {
    System.out.println("\n Starting trace analysis...\n" );
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CALLER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ProcessMethodCall();
    }
  }

/** Gérer chaque appel de méthode */
  static final public void ProcessMethodCall() throws ParseException {
                            Token caller, callee, method;
    jj_consume_token(CALLER);
    jj_consume_token(COLON);
    caller = jj_consume_token(LITERAL);
    jj_consume_token(COMMA);
    jj_consume_token(METHOD);
    jj_consume_token(COLON);
    method = jj_consume_token(LITERAL);
    jj_consume_token(COMMA);
    jj_consume_token(CALLEE);
    jj_consume_token(COLON);
    callee = jj_consume_token(LITERAL);
    jj_consume_token(SEMICOLON);
        if (pendingEncryptions.containsKey(caller.image)) {
            // Étape 2 : Transmission des données chiffrées
            if (!caller.image.equals(callee.image)) {
                encryptionToSend.put(callee.image, (String) pendingEncryptions.get(caller.image));
            }
            pendingEncryptions.remove(caller.image);
        }
        else if (encryptionToSend.containsKey(caller.image)) {
            // Étape 3 : Déchiffrement
            if (caller.image.equals(callee.image)) {
                String originalEncryptor = (String) encryptionToSend.get(caller.image);

                if (originalEncryptor != null) {
                    Map<String, String> tactic = new HashMap<String, String>();
                    tactic.put("Encryptor", originalEncryptor);
                    tactic.put("Decryptor", caller.image);

                    detectedTactics.add(tactic);
                    System.out.println("Maintain Data Confidentiality tactic detected!");
                }
            }
            encryptionToSend.remove(caller.image);
        }
        else {
            // Étape 1 : Détection de l'encryption
            if (caller.image.equals(callee.image)) {
                pendingEncryptions.put(caller.image, caller.image);
            }
        }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MaintainDataConfidentialityParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[1];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,};
   }

  /** Constructor with InputStream. */
  public MaintainDataConfidentialityParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MaintainDataConfidentialityParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MaintainDataConfidentialityParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MaintainDataConfidentialityParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MaintainDataConfidentialityParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MaintainDataConfidentialityParser(MaintainDataConfidentialityParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MaintainDataConfidentialityParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[13];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 1; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 13; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
